v5.3.7
- Updated - Forms/Inputs validation JS as a chunk loaded in "common" route
- Fixed - Logged in Privacy Policy commenting Validation

v5.3.6
- Fixed - Temporary fallback after updating Navigation: fallback first to Classic Menu - since we insert it with theme starter content

v5.3.5
- Updated - FSE Folder naming updated to match upcoming WP 5.9
- Updated - Navigation block PHP render to WP 5.9
- Updated - Latest Comments PHP render to WP 5.9 - it might be changed to query-comments-loop if it will be properly done (similar to Latest Posts render)
- Fixed - Temporary fixed Core/Pattern block to render shortcodes/emoji (submitted bug report to WP Gutenberg github)

v5.3.4
- Updated - Minimum required WP version to 5.9-beta2 failsafe to theme updates on WP 5.8.2+

v5.3.3
- Updated - Global cleanup / JSON cleanup / Clean old changelog before block-based update
- Updated - CSS utilities class suggestion added to Gutenberg Class extentsion from Styles\Utilities class
- Updated - Core/Navigation and Core/Navigation-Link cleanup and styles
- Updated - Header/Footer template parts will now use pattern block
- Updated - Comment blocks naming in Gutenberg Styles extension (remove previous "post" prefix)
- Updated - theme.json template parts naming
- Updated - gutenberg_ prefixed functions renamed to wp_ (in progress)
- Updated - Normalized some filters usage / block wrap context (to block classname)
- Updated - Forms.css to chunk, loaded only by blocks with inputs (comment form, search and login form)
- Removed - Navigation Area block used in header (will be deprecated until WP 5.9)
- Added - Header/Footer/Query patterns and show them into block types
- Added - Threaded Comments Template
- Added - Comments Pagination
- Added - Block Patterns index.json to extend glob registration with custom pattern attributes (description, name etc)

v5.3.2
- Removed - Gutenberg hide title plugin (and related PHP code) - not necessary in a FSE theme