@@ -1,5 +1,6 @@
 v5.3.7
 - Updated - Forms/Inputs validation JS as a chunk loaded in "common" route
+- Fixed - Navigation fatal error after Gutenberg Plugin update
 - Fixed - Logged in Privacy Policy commenting Validation
 
 v5.3.6
